# workbridge

./: .editorconfig  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  clippy.toml  deny.toml  release.toml  rustfmt.toml  typos.toml  workbridge-sidebar-playground.html
.claude/: a3f7c2d1-review-loop.md  b7e3a1f2-review-loop.md  c9d2e4f1-review-loop.md  settings.json  settings.local.json
.claude/skills/test-tui/: SKILL.md
.github/workflows/: ci.yml  dummy-ci.yml  release.yml
ci/: file-size-budgets.toml
docs/: CLEANUP.md  KNOWN_LIMITATIONS.md  TESTING.md  UI.md  aggregation.md  cli.md  data-assembly.md  error-states.md  harness-contract.md  inbox.md  invariants.md  metrics.md  release-checklist.md  releasing.md  repository-registry.md  user_journey_draft.md  work-items.md  worktree-management.md
docs/hygiene-campaign/: phase-3-calibration.md
docs/session-authorizations/: 2026-04-15-pr91-invariant-13.md  README.md
docs/superpowers/plans/: 2026-04-18-cargo-release-support.md  2026-04-18-crates-io-first-publish.md  2026-04-20-test-side-effects-audit.md  2026-04-21-phase-4-logical-decomposition.md
docs/superpowers/specs/: 2026-04-18-cargo-release-support-design.md  2026-04-18-crates-io-first-publish-design.md  2026-04-18-test-side-effects-audit-design.md  2026-04-20-milestone-1-nested-work-items.md  2026-04-20-milestone-2-mcp-work-item-creation.md  (+1 more)
hooks/: budget-check.sh  clippy-check.sh  pre-commit  pre-push  ratatui-builtin-check.sh
prompts/: stage_prompts.json
src/: agent_backend.rs  app.rs  assembly.rs  click_targets.rs  clipboard.rs  config.rs  create_dialog.rs  daemon.rs  dashboard_seed.rs  event.rs  fetcher.rs  github_client.rs  layout.rs  main.rs  mcp.rs  metrics.rs  pr_service.rs  prompts.rs  salsa.rs  session.rs  session_id.rs  theme.rs  ui.rs  verify_ci_red.rs  work_item.rs  work_item_backend.rs  worktree_service.rs
src/agent_backend/: claude_code.rs  codex.rs  codex_extras_tests.rs  codex_tests.rs  common.rs  mod.rs  opencode.rs
src/app/: activities.rs  cleanup.rs  click_tracking.rs  display_list.rs  fetcher_bridge.rs  flags.rs  gate_polling.rs  global_drawer.rs  global_drawer_polling.rs  harness.rs  helpers.rs  impl_01.rs  impl_02.rs  impl_03.rs  impl_04.rs  impl_05.rs  impl_06.rs  impl_07.rs  impl_08.rs  impl_09.rs  impl_10.rs  impl_11.rs  impl_12.rs  impl_13.rs  impl_14.rs  impl_15.rs  impl_16.rs  impl_17.rs  impl_18.rs  mcp_bridge_and_imports.rs  merge_exec.rs  mergequeue.rs  metrics.rs  mod.rs  orphan_cleanup.rs  pr_creation.rs  pr_creation_thread.rs  pr_identity_backfill.rs  pr_merge_and_review.rs  rebase_gate_compute.rs  (+19 more)
src/app/tests/: mod.rs  part_01.rs  (+24 more)
src/assembly/: convert.rs  mod.rs  query.rs
src/cli/: config.rs  mcp.rs  mod.rs  repos.rs  seed_dashboard.rs
src/config/: loader.rs  mod.rs  operations.rs
src/create_dialog/: mod.rs  set_branch.rs  slug.rs
src/event/: layout.rs  mod.rs  paste.rs  tests.rs  tests_dispatch.rs  util.rs
src/fetcher/: loop_impl.rs  mod.rs
src/github_client/: mock.rs  mod.rs  real.rs  stub.rs
src/mcp/: bridge.rs  global.rs  mod.rs  server.rs  tests.rs
src/metrics/: aggregator.rs  mod.rs  tests.rs
src/side_effects/: clipboard.rs  clock.rs  mod.rs  paths.rs
src/snapshots/: workbridge__ui__snapshot_tests__activity_indicator_overrides_status_message.snap  workbridge__ui__snapshot_tests__activity_indicator_with_count.snap  workbridge__ui__snapshot_tests__alert_dialog.snap  workbridge__ui__snapshot_tests__board_view_blocked_item.snap  workbridge__ui__snapshot_tests__board_view_empty.snap  workbridge__ui__snapshot_tests__board_view_item_in_every_column_120x40.snap  workbridge__ui__snapshot_tests__board_view_items_distributed.snap  workbridge__ui__snapshot_tests__board_view_long_title_wraps.snap  workbridge__ui__snapshot_tests__board_view_selected_item.snap  workbridge__ui__snapshot_tests__board_view_with_status_bar.snap  workbridge__ui__snapshot_tests__cleanup_confirm_dialog.snap  workbridge__ui__snapshot_tests__cleanup_progress_dialog.snap  workbridge__ui__snapshot_tests__cleanup_reason_dialog.snap  workbridge__ui__snapshot_tests__create_dialog_default_view.snap  workbridge__ui__snapshot_tests__create_dialog_with_error.snap  workbridge__ui__snapshot_tests__create_dialog_with_input_and_repos_focused.snap  workbridge__ui__snapshot_tests__empty_app_default_view.snap  workbridge__ui__snapshot_tests__empty_app_with_status_message.snap  workbridge__ui__snapshot_tests__merge_progress_dialog.snap  workbridge__ui__snapshot_tests__merge_prompt_dialog.snap  workbridge__ui__snapshot_tests__multiple_tabs_second_selected.snap  workbridge__ui__snapshot_tests__no_plan_prompt_dialog.snap  workbridge__ui__snapshot_tests__no_sticky_header_at_top_of_list.snap  workbridge__ui__snapshot_tests__no_sticky_header_in_drill_down.snap  workbridge__ui__snapshot_tests__panel_title_shows_item_count.snap  workbridge__ui__snapshot_tests__review_request_pr_selected.snap  workbridge__ui__snapshot_tests__rework_prompt_dialog.snap  workbridge__ui__snapshot_tests__right_panel_focused.snap  workbridge__ui__snapshot_tests__right_panel_focused_with_session.snap  workbridge__ui__snapshot_tests__settings_overlay_with_config.snap  workbridge__ui__snapshot_tests__single_tab_selected.snap  workbridge__ui__snapshot_tests__sticky_header_shows_correct_group_when_multiple_groups.snap  workbridge__ui__snapshot_tests__sticky_header_visible_when_scrolled.snap  workbridge__ui__snapshot_tests__tab_with_dead_session.snap  workbridge__ui__snapshot_tests__tab_with_work_item_and_status.snap  workbridge__ui__snapshot_tests__tab_with_work_item_context.snap  workbridge__ui__snapshot_tests__tab_with_work_item_no_labels.snap  workbridge__ui__snapshot_tests__unlinked_pr_selected.snap  workbridge__ui__snapshot_tests__work_item_context_bar_no_labels.snap  workbridge__ui__snapshot_tests__work_item_context_bar_with_status.snap  (+10 more)
src/ui/: board.rs  common.rs  detail_pane.rs  header.rs  mod.rs  output_pane.rs  selection.rs
src/work_item_backend/: mock.rs  mod.rs
src/worktree_service/: mod.rs
(+71 files in other folders)
