[package]
name = "workbridge"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Multi-repo coding agent orchestration in your terminal."
repository = "https://github.com/jkirsteins/workbridge"
homepage = "https://github.com/jkirsteins/workbridge"
readme = "README.md"
keywords = ["claude", "codex", "tui", "workflow", "worktree"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".claude/**",
    "AGENTS.md",
    "CLAUDE.md",
    "docs/superpowers/**",
    "hooks/**",
    "workbridge-sidebar-playground.html",
]

[dependencies]
tui-term = "0.3"
vt100 = "0.15"
libc = "0.2"
signal-hook = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
uuid = { version = "1", features = ["v4"] }
directories = "5"
rat-salsa = "4"
rat-widget = "3"
rat-event = "2"
crossbeam-channel = "0.5"
ratatui-core = "0.1"
ratatui-crossterm = "0.1"
ratatui-widgets = "0.3"
unicode-width = "0.2"
arboard = "3"
which = "6"

[features]
integration = []

[dev-dependencies]
insta = "1"
tempfile = "3"

[lints.rust]
# Nudge toward Rust 2018+ idioms: module path cleanliness, anonymous
# lifetimes, no bare trait objects, etc. Set to "warn" rather than
# "deny" so the group can be raised incrementally; CI's
# `-D warnings` then promotes any warning to an error.
rust_2018_idioms = { level = "warn", priority = -1 }
# `unsafe_code` at `warn` (not `forbid`) because the PTY FFI in
# `src/session.rs` and the two `killpg` blocks in `src/app.rs` are
# legitimate and SAFETY-commented. Each legitimate unsafe site opts
# out via `#[expect(unsafe_code, reason = "...")]` (not `#[allow]`,
# because `clippy::allow_attributes` is denied). Review policy in
# CONTRIBUTING.md ("Unsafe code policy") requires a SAFETY comment
# and a reviewer for any new unsafe block.
unsafe_code = "warn"

[lints.clippy]
# Prohibit accidental dbg! / todo! / unimplemented! in committed code.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

# Carpet-bombs at warn: promoted to error via CI's -D warnings.
# `priority = -1` lets individual `allow`/`deny` lines below override
# a group-level warn.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Restriction lints - production code only; tests carve out via CI's
# two-invocation pattern (`-A clippy::unwrap_used ...` on --tests).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Close the source-level allow loophole. Every suppression has to live
# in this file with a rationale rather than in an ad-hoc `#[allow]`.
allow_attributes = "deny"
allow_attributes_without_reason = "deny"

# CLI-surface allows: main.rs is the CLI entry point; non-CLI code
# routes user-visible output through the toast / status-bar subsystem,
# enforced by review rather than by the lint.
print_stdout = "allow"
print_stderr = "allow"
exit = "allow"

# Noise allows. Each has been judged pure noise for this crate's style.
module_name_repetitions = "allow"
similar_names = "allow"    # False-positive-heavy in TUI / event code.

# Doc-coverage lints: deny so new functions must document their error
# and panic conditions.
missing_errors_doc = "deny"
missing_panics_doc = "deny"

# Function size: deny so overly-long functions have to be decomposed
# (same philosophy as the 700-line file budget, one level down).
too_many_lines = "deny"

# Cast lints: deny so every cast between integer widths is deliberate.
# Legitimate casts of u16 ratatui geometry to larger widths are always
# safe and can use `u32::from(...)` / `usize::from(...)` instead of `as`.
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_lossless = "deny"
cast_precision_loss = "deny"

# Structural lints: deny so unnecessary owned pass-by-value, premature
# drop tightening, boolean-bag structs, and unused-self methods are all
# surfaced as review friction rather than silently accumulating.
needless_pass_by_value = "deny"
significant_drop_tightening = "deny"
struct_excessive_bools = "deny"
unused_self = "deny"

[lints.rustdoc]
# No existing crate-level docs to break; safe to deny from day one.
broken_intra_doc_links = "deny"
